# joaquinurruti-website

./: .gitignore  404.html  CLAUDE.md  README.md  build.sh  index.html  mkdocs.yml  pyproject.toml  requirements.txt  robots.txt  sitemap.xml  start_server.sh
.github/workflows/: ci.yml
blog/: index.html
blog/archive/2026/: index.html
blog/category/ai-engineering/: index.html
blog/category/comandos/: index.html
blog/category/commands/: index.html
blog/category/data-engineering/: index.html
blog/category/data-extraction/: index.html
blog/category/document-processing/: index.html
blog/category/extracción-de-datos/: index.html
blog/category/gis/: index.html
blog/category/herramientas/: index.html
blog/category/python/: index.html
blog/category/quick-tips/: index.html
blog/category/tools/: index.html
blog/category/xarray/: index.html
docs/: index.es.md  index.md
docs/blog/: .authors.yml
docs/portfolio/: index.es.md  index.md
docs/portfolio/projects/: project-1.es.md  project-1.md  project-2.md
en/: 404.html  index.html  mkdocs.yml  sitemap.xml
en/blog/: index.html
en/docs/: index.md  javascripts
en/docs/portfolio/: index.md
en/portfolio/: index.html
en/search/: search_index.json
es/: 404.html  index.html  mkdocs.yml  sitemap.xml
es/blog/: index.html
es/docs/: CNAME  index.md  stylesheets
es/javascripts/: mermaid-init.js
es/portfolio/: index.html
es/search/: search_index.json
es/stylesheets/: hero.css
portfolio/: index.html
search/: search_index.json
shared/stylesheets/: extra.css
(+109 files in other folders)
