[project]
name = "joaquinurruti-website"
version = "0.1.0"
description = "Personal website of Joaquín Urruti — AI & GIS Engineer specializing in geospatial data science, precision agriculture, and process automation."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mkdocs-material[imaging]>=9.6.9",
]
